methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:-6: error: not found: value haveBaggle
			if (haveBaggle()) 
                            ^MethodsReturning:2: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime26.MethodsReturning'
override def run() {
             ^